--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       </p>
       <p>Salmon uses <em>Jade  </em>and<em> Sass </em>and includes clean flex layout classes, optional bootstrap & skeleton grid, and what-not.</p>
       <h2>Grids</h2>
-      <p>Choose whether you want to use bootstrap's or skeleton's grid then go to  <em>main.sass </em>file and comment out the grid's css file you will not use </p>
+      <p>Choose whether you want to use bootstrap's or skeleton's grid then go to  <em>main.sass </em>file and comment out the grid's css file you will not use. </p>
       <h2>Flex layout</h2>
       <p>This page is using flex classes. I have included helpful comments on the  <em>flex-layout.sass </em>file. Go ahead, experiment! </p>
       <h2>Getting started</h2>
