--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
       <h2>Flex layout</h2>
       <p>This page is using flex classes. I have included helpful comments on the  <em>flex-layout.sass </em>file. Go ahead, experiment! </p>
       <h2>Getting started</h2>
-      <p>Fork or clone, do whatever you want. If you're not into Sass and Jade, you can use <a href="https://github.com/JustineWin/Salmon-Boilerplate" target="_blank">Salmon Boilerplate </a>- an HTML/CSS version of this.</p>
+      <p>Fork or clone, do whatever you want. If you're not into Sass and Jade, you can use <a href="https://github.com/JustineWin/Salmon-Boilerplate" target="_blank">Salmon v2 </a>- an HTML/CSS version of this.</p>
     </div>
     <hr/>
     <div class="col-sm-7"></div>
