--- a/index.html
+++ b/index.html
@@ -2,37 +2,53 @@
 <html lang="en"></html>
 <head>
   <title>Salmon</title>
+  <meta name="description" content="A Simple Boilerplate.">
   <meta charset="UTF-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1"/>
-  <link rel="icon" type="image/x-icon" href="assets/img/favicon.ico"/>
-  <link rel="stylesheet" href="assets/css/main.css"/>
+  <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
+  <meta property="og:title" content="Salmon">
+  <meta property="og:site_name" content="Salmon">
+  <meta property="og:url" content="https://justinewin.github.io/Salmon-Gulp">
+    <meta property="og:description" content="A Simple Boilerplate.">
+  <!-- Fontawesome -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css"/>
+
+  <!-- CSS link -->
+
+  <!-- Grid: comment out what is not used between Skeleton or Bootstrap -->
+  <!-- <link rel="stylesheet" href="assets/css/skeleton-grid.css"> -->
+  <link rel="stylesheet" href="assets/css/bootstrap-grid.css">
+  <!-- Helper: contains flex classes, margins, what-not -->
+  <link rel="stylesheet" href="assets/css/helper.css">
+  <!-- Main CSS: contains your custom css -->
+  <link rel="stylesheet" href="assets/css/main.css">
+
 </head>
 <body>
   <nav>
     <ul>
       <li>Salmon</li>
-      <li> <a href="https://github.com/JustineWin/Salmon-Gulp/tree/Salmon" target="_blank" class="fork-btn">Fork Me  <i class="fa fa-code-fork"> </i></a></li>
+      <li> <a href="https://github.com/JustineWin/Salmon-Gulp" target="_blank" class="fork-btn">Fork Me  <i class="fa fa-code-fork"> </i></a></li>
     </ul>
   </nav>
-  <div class="container flex -center">
-    <div class="col-sm-7">
-      <h1>Salmon Boilerplate</h1>
-      <p class="-highlight mt30">
-         
-        This boilerplate is <a href="https://github.com/JustineWin" target="_blank">Justine Win's </a>custom version of <a href="http://devtipsstarterkit.com/">Devtip's Starter Kit V2.</a>
-      </p>
-      <p>Salmon uses <em>Jade  </em>and<em> Sass </em>and includes clean flex layout classes, optional bootstrap & skeleton grid, and what-not.</p>
-      <h2>Grids</h2>
-      <p>Choose whether you want to use bootstrap's or skeleton's grid then go to  <em>main.sass </em>file and comment out the grid's css file you will not use. </p>
-      <h2>Flex layout</h2>
-      <p>This page is using flex classes. I have included helpful comments on the  <em>flex-layout.sass </em>file. Go ahead, experiment! </p>
-      <h2>Getting started</h2>
-      <p>Fork or clone, do whatever you want. If you're not into Sass and Jade, you can use <a href="https://github.com/JustineWin/Salmon-Boilerplate" target="_blank">Salmon v2 </a>- an HTML/CSS version of this.</p>
+  <div class="container">
+    <div class="row flex -center">
+      <div class="col-sm-7">
+        <h1>Salmon Boilerplate</h1>
+        <p class="-highlight mt30">
+          This boilerplate is <a href="https://github.com/JustineWin" target="_blank">Justine Win's </a>custom version of <a href="http://devtipsstarterkit.com/">Devtip's Starter Kit V2.</a>
+        </p>
+        <p>Salmon uses <em>HTML5  </em>and<em> CSS3 </em>and includes clean flex layout classes, optional bootstrap & skeleton grid, and what-not.</p>
+        <h2>Grids</h2>
+        <p>Choose whether you want to use bootstrap's or skeleton's grid then go to  <em>index.html </em>file and comment out the grid's css file you will not use in the `<head>` tag</p>
+        <h2>Flex layout</h2>
+        <p>This page is using flex classes. I have included helpful comments on the  <em> helper.css </em> </em>file. Go ahead, experiment! </p>
+        <h2>Getting started</h2>
+        <p>Fork or clone, do whatever you want. If you're Sass and Jade, you can use <a href="https://github.com/JustineWin/Salmon-Gulp/tree/Salmon" target="_blank">Salmon Boilerplate </a>- a Jade, Sass, and Gulp version of this.</p>
+      </div>
     </div>
-    <hr/>
-    <div class="col-sm-7"></div>
   </div>
-  <script src="./vendors/jquery/dist/jquery.min.js"></script>
-  <script src="./assets/js/app.js"></script>
+
+  <!-- Jquery -->
+  <script src="/assets/js/jquery.min.js"></script>
 </body>
