--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
   <meta property="og:title" content="Salmon">
   <meta property="og:site_name" content="Salmon">
   <meta property="og:url" content="https://justinewin.github.io/Salmon-Gulp">
-    <meta property="og:description" content="A Simple Boilerplate.">
+  <meta property="og:description" content="A Simple Boilerplate.">
+  <meta property="og:image" content="https://justinewin.github.io/Salmon-Gulp/assets/img/salmon-cover.png">
   <!-- Fontawesome -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css"/>
 
