--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         </p>
         <p>Salmon uses <em>HTML5  </em>and<em> CSS3 </em>and includes clean flex layout classes, optional bootstrap & skeleton grid, and what-not.</p>
         <h2>Grids</h2>
-        <p>Choose whether you want to use bootstrap's or skeleton's grid then go to  <em>index.html </em>file and comment out the grid's css file you will not use in the `<head>` tag</p>
+        <p>Decide whether you want to use bootstrap's or skeleton's grid. Go to  <em>main.sass </em> and comment out the grid's css file you will not use.</p>
         <h2>Flex layout</h2>
         <p>This page is using flex classes. I have included helpful comments on the  <em> helper.css </em> </em>file. Go ahead, experiment! </p>
         <h2>Getting started</h2>
