--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
   <nav>
     <ul>
       <li>Salmon</li>
-      <li> <a href="https://github.com/JustineWin/Salmon-Gulp" target="_blank" class="fork-btn">Fork Me  <i class="fa fa-code-fork"> </i></a></li>
+      <li> <a href="https://github.com/JustineWin/Salmon/tree/Salmon" target="_blank" class="fork-btn">Fork Me  <i class="fa fa-code-fork"> </i></a></li>
     </ul>
   </nav>
   <div class="container">
@@ -45,7 +45,7 @@
         <h2>Flex layout</h2>
         <p>This page is using flex classes. I have included helpful comments on the  <em> helper.css </em> </em>file. Go ahead, experiment! </p>
         <h2>Getting started</h2>
-        <p>Fork or clone, do whatever you want. If you're Sass and Jade, you can use <a href="https://github.com/JustineWin/Salmon-Gulp/tree/Salmon" target="_blank">Salmon Boilerplate </a>- a Jade, Sass, and Gulp version of this.</p>
+        <p>Fork or clone, do whatever you want. If you're not into Sass and Jade, you can use <a href="https://github.com/JustineWin/Salmon/tree/Salmon-v2" target="_blank">Salmon v2 </a>- an HTML5 & CSS, No gulp version.</p>
       </div>
     </div>
   </div>
