--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         <p class="-highlight mt30">
           This boilerplate is <a href="https://github.com/JustineWin" target="_blank">Justine Win's </a>custom version of <a href="http://devtipsstarterkit.com/">Devtip's Starter Kit V2.</a>
         </p>
-        <p>Salmon uses <em>HTML5  </em>and<em> CSS3 </em>and includes clean flex layout classes, optional bootstrap & skeleton grid, and what-not.</p>
+        <p>Salmon uses <em>Jade  </em>and<em> Sass (Gulp) </em>and includes clean flex layout classes, optional bootstrap & skeleton grid, and what-not.</p>
         <h2>Grids</h2>
         <p>Decide whether you want to use bootstrap's or skeleton's grid. Go to  <em>main.sass </em> and comment out the grid's css file you will not use.</p>
         <h2>Flex layout</h2>
