--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         <h2>Flex layout</h2>
         <p>This page is using flex classes. I have included helpful comments on the  <em> helper.css </em> </em>file. Go ahead, experiment! </p>
         <h2>Getting started</h2>
-        <p>Fork or clone, do whatever you want. If you're not into Sass and Jade, you can use <a href="https://github.com/JustineWin/Salmon/tree/Salmon-v2" target="_blank">Salmon v2 </a>- an HTML5 & CSS, No gulp version.</p>
+        <p>Fork or clone, do whatever you want. If you're not into Sass and Jade, you can use <a href="https://github.com/JustineWin/Salmon/tree/Salmon-v2" target="_blank">Salmon v2 </a>- an HTML5 & CSS3, Non-gulp version.</p>
       </div>
     </div>
   </div>
