--- a/index.html
+++ b/index.html
@@ -29,27 +29,30 @@
   <nav>
     <ul>
       <li>Salmon</li>
-      <li> <a href="https://github.com/JustineWin/Salmon/tree/Salmon" target="_blank" class="fork-btn">Fork Me  <i class="fa fa-code-fork"> </i></a></li>
+      <li> <a href="https://github.com/JustineWin/Salmon-Gulp" target="_blank" class="fork-btn">Fork Me  <i class="fa fa-code-fork"> </i></a></li>
     </ul>
   </nav>
-  <div class="container">
-    <div class="row flex -center">
-      <div class="col-sm-7">
-        <h1>Salmon Boilerplate</h1>
-        <p class="-highlight mt30">
-          This boilerplate is <a href="https://github.com/JustineWin" target="_blank">Justine Win's </a>custom version of <a href="http://devtipsstarterkit.com/">Devtip's Starter Kit V2.</a>
-        </p>
-        <p>Salmon uses <em>Jade  </em>and<em> Sass (Gulp) </em>and includes clean flex layout classes, optional bootstrap & skeleton grid, and what-not.</p>
-        <h2>Grids</h2>
-        <p>Decide whether you want to use bootstrap's or skeleton's grid. Go to  <em>main.sass </em> and comment out the grid's css file you will not use.</p>
-        <h2>Flex layout</h2>
-        <p>This page is using flex classes. I have included helpful comments on the  <em> helper.css </em> </em>file. Go ahead, experiment! </p>
-        <h2>Getting started</h2>
-        <p>Fork or clone, do whatever you want. If you're not into Sass and Jade, you can use <a href="https://github.com/JustineWin/Salmon/tree/Salmon-v2" target="_blank">Salmon v2 </a>- an HTML5 & CSS3, Non-gulp version.</p>
-      </div>
+  <div class="container flex -center">
+    <div class="col-sm-7">
+      <h1>Salmon Boilerplate</h1>
+      <div class="flex -center"><img src="/assets/img/Salmon.png" alt=""></div>
+      <p class="-highlight mt30">
+         
+        This boilerplate is <a href="https://github.com/JustineWin" target="_blank">Justine Win's </a>custom version of <a href="http://devtipsstarterkit.com/">Devtip's Starter Kit V2.</a>
+      </p>
+      <p>Salmon uses <em>Jade (Pug)  </em>and<em> Sass </em>and includes clean flex layout classes, optional bootstrap & skeleton grid, and what-not.</p>
+      <h2>Grids</h2>
+      <p>Choose whether you want to use bootstrap's or skeleton's grid then go to  <em>main.sass </em>file and comment out the grid's css file you will not use </p>
+      <h2>Flex layout</h2>
+      <p>This page is using flex classes. I have included helpful comments on the  <em>flex-layout.sass </em>file. Go ahead, experiment! </p>
+      <h2>Getting started</h2>
+      <p>Fork or clone, do whatever you want. If you're not into Sass and Jade, you can use <a href="https://github.com/JustineWin/Salmon-Nongulp" target="_blank">Salmon Boilerplate </a>- an HTML/CSS version of this.</p>
+      <h2>Other Notes</h2>
+      <p>We are currently using Jade. We're still figuring out how to configure our gulpfile to enable Pug. Thank you for your patience :)</p>
     </div>
+    <hr>
+    <div class="col-sm-7"></div>
   </div>
-
-  <!-- Jquery -->
-  <script src="/assets/js/jquery.min.js"></script>
+  <script src="./vendors/jquery/dist/jquery.min.js"></script>
+  <script src="./assets/js/app.js"></script>
 </body>
