--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
   <div class="container flex -center">
     <div class="col-sm-7">
       <h1>Salmon Boilerplate</h1>
-      <div class="flex -center"><img src="/assets/img/Salmon.png" alt=""></div>
+      <div class="flex -center"><img src="https://justinewin.github.io/Salmon-Gulp/assets/img/Salmon.png" alt=""></div>
       <p class="-highlight mt30">
          
         This boilerplate is <a href="https://github.com/JustineWin" target="_blank">Justine Win's </a>custom version of <a href="http://devtipsstarterkit.com/">Devtip's Starter Kit V2.</a>
