--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
   <link rel="shortcut icon" type="image/x-icon" href="https://justinewin.github.io/Salmon/favicon.ico">
   <meta property="og:title" content="Salmon">
   <meta property="og:site_name" content="Salmon">
-  <meta property="og:url" content="https://justinewin.github.io/Salmon-Gulp">
+  <meta property="og:url" content="https://justinewin.github.io/Salmon">
   <meta property="og:description" content="A Simple Boilerplate.">
-  <meta property="og:image" content="https://justinewin.github.io/Salmon-Gulp/assets/img/salmon-cover.png">
+  <meta property="og:image" content="https://justinewin.github.io/Salmon/assets/img/salmon-cover.png">
   <!-- Fontawesome -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css"/>
 
@@ -35,7 +35,7 @@
   <div class="container flex -center">
     <div class="col-sm-7">
       <h1>Salmon Boilerplate</h1>
-      <div class="flex -center"><img src="https://justinewin.github.io/Salmon-Gulp/assets/img/Salmon.png" alt=""></div>
+      <div class="flex -center"><img src="https://justinewin.github.io/Salmon/assets/img/Salmon.png" alt=""></div>
       <p class="-highlight mt30">
          
         This boilerplate is <a href="https://github.com/JustineWin" target="_blank">Justine Win's </a>custom version of <a href="http://devtipsstarterkit.com/">Devtip's Starter Kit V2.</a>
