--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="description" content="A Simple Boilerplate.">
   <meta charset="UTF-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1"/>
-  <link rel="shortcut icon" type="image/x-icon" href="https://justinewin.github.io/Salmon/favicon.ico">
+  <link rel="shortcut icon" type="image/x-icon" href="https://justinewin.github.io/Salmon/assets/img/favicon.ico">
   <meta property="og:title" content="Salmon">
   <meta property="og:site_name" content="Salmon">
   <meta property="og:url" content="https://justinewin.github.io/Salmon">
