--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
       <h2>Getting started</h2>
       <p>Fork or clone, do whatever you want. If you're not into Sass and Jade, you can use <a href="https://github.com/JustineWin/Salmon-Nongulp" target="_blank">Salmon Boilerplate </a>- an HTML/CSS version of this.</p>
       <h2>Other Notes</h2>
-      <p>We are currently using Jade. We're still figuring out how to configure our gulpfile to enable Pug. Thank you for your patience :)</p>
+      <p>This boilerplate uses Gulp which runs browsersync and image minifier. We are currently using Jade. We're still figuring out how to configure our gulpfile to enable Pug. Thank you for your patience :)</p>
     </div>
     <hr>
     <div class="col-sm-7"></div>
